ui creation and content added

--- a/app/globals.css
+++ b/app/globals.css
@@ -68,3 +68,11 @@ body {
   color: #a6d719;
   font-size: 14px;
 }
+
+.game-section-10 {
+  padding-top: 0 !important;
+}
+
+.about-section-21 {
+  padding-bottom: 60px !important;
+}
