--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -4783,6 +4783,19 @@ span {
   justify-content: space-between;
   z-index: 9;
   position: relative;
+  margin-bottom: 120px;
+}
+
+@media (max-width: 1199px) {
+  .gt-newsletter-wrapper {
+    margin-bottom: 100px;
+  }
+}
+
+@media (max-width: 991px) {
+  .gt-newsletter-wrapper {
+    margin-bottom: 80px;
+  }
 }
 
 .gt-newsletter-wrapper::before {
@@ -5102,19 +5115,19 @@ span {
   position: relative;
   z-index: 9;
   padding-bottom: 60px;
-  margin-top: 120px;
+  margin-top: 0px;
 }
 
 @media (max-width: 1199px) {
   .gt-footer-section {
-    margin-top: 100px;
+    margin-top: 0px;
     padding-bottom: 30px;
   }
 }
 
 @media (max-width: 991px) {
   .gt-footer-section {
-    margin-top: 80px;
+    margin-top: 0px;
   }
 }
 
@@ -5211,6 +5224,12 @@ span {
   .footer-wrapper-3 .left-content {
     flex-wrap: wrap;
     gap: 15px;
+  }
+}
+
+@media (max-width: 454px) {
+  .footer-main-bg {
+    margin: 0 12px !important;
   }
 }
 
@@ -9400,9 +9419,9 @@ span {
 .gt-breadcrumb-wrapper .gt-page-heading .gt-breadcrumb-items {
   display: inline-flex;
   justify-content: center;
+  align-items: center;
   margin-top: 20px;
   gap: 10px;
-  justify-content: center;
 }
 
 @media (max-width: 1199px) {
@@ -16483,6 +16502,22 @@ span {
 @media (max-width: 991px) {
   .section-padding {
     padding: 80px 0;
+  }
+}
+
+.blog-padding {
+  padding: 0 0 120px;
+}
+
+@media (max-width: 1199px) {
+  .blog-padding {
+    padding: 0 0 100px;
+  }
+}
+
+@media (max-width: 991px) {
+  .blog-padding {
+    padding: 0 0 80px;
   }
 }
 
